minitrace-macro/tests/ui/err/has-name-and-full-name.stderr
error: `name` and `full_name` can not be used together
 --> tests/ui/err/has-name-and-full-name.rs:3:1
  |
3 | #[trace(name = "Name", full_name = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
