minitrace-macro/tests/ui/err/has-name-and-full-name.rs
use minitrace::trace;

#[trace(name = "Name", full_name = true)]
fn f() {}

fn main() {}
